<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorAccent"
    tools:context=".week_calculator.WeekSelectionFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/estimateWeekText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/estimate_current_week"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/estimateWeekConstraintLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/estimateWeekConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/layout_border_esitmation"
            app:layout_constraintBottom_toTopOf="@+id/currentWeekText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estimateWeekText">

            <TextView
                android:id="@+id/selectModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/select_estimation_mode"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/estimateWeekConstraintLayout"
                app:layout_constraintStart_toStartOf="@+id/estimateWeekConstraintLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/estimationMode"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/background_dark"
                android:entries="@array/week_estimation_type"
                app:layout_constraintEnd_toEndOf="@+id/estimateWeekConstraintLayout"
                app:layout_constraintStart_toStartOf="@+id/estimateWeekConstraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/selectModeText" />

            <DatePicker
                android:id="@+id/datePicker"
                style="@style/MyDatePickerStyle"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:calendarViewShown="?android:attr/windowOverscan"
                android:datePickerMode="spinner"
                android:scrollbarStyle="insideOverlay"
                android:theme="@style/MyDatePickerStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/estimateWeekConstraintLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/estimateWeekConstraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/estimationMode" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="0dp"
            android:layout_height="69dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_ripple"
            android:clickable="@bool/bool_name"
            android:elevation="0dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentWeekText" />

        <TextView
            android:id="@+id/currentWeekText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/current_week"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estimateWeekConstraintLayout" />

        <TextView
            android:id="@+id/weekNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_0"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/currentWeekText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/currentWeekText" />

        <TextView
            android:id="@+id/invalidWeekTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acceptButton"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>